appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- tapOn:
    text: "J"
- tapOn:
    text: "JS Actions"
- tapOn:
    text: "Clipboard"
- tapOn: 
    text: "Set clipboard content to 'Hi there'"
- tapOn: 
    text: "Get clipboard content"
# Because the image loading can take some time due to resources on emulator, we need to wait for the image to be visible
- extendedWaitUntil: 
     visible: randText  # Any random text that does not exist in the UI
     optional: true  # This should be true so that the test won't fail
     timeout: 5000 # 5 seconds
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/clipboard"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/clipboard.png"
