appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../../maestro/Precondition.yaml"
- tapOn:
    point: "37%,94%"
# Authentication
- tapOn:
    text: "Authentication"
- tapOn:
    text: "Is biometric authentication supported?"
# - assertVisible:
#     text: "Information"
- tapOn:
    text: "OK"
- tapOn: "Go back"


# Clipboard
- tapOn:
    text: "Clipboard"
- tapOn:
    text: "Set clipboard content to 'Hi there'"
- tapOn:
    text: "Get clipboard content"
- tapOn: "Go back"

# Network
- tapOn:
    text: "Network"
- tapOn:
    text: "Is connected?"
- assertVisible:
    text: "Information"
- tapOn:
    text: "OK"
- tapOn:
    text: "Is wifi connected?"
- assertVisible:
    text: "Information"
- tapOn:
    text: "OK"
- tapOn:
    text: "Is cellular connected?"
- assertVisible:
    text: "Information"
- tapOn:
    text: "OK"
- tapOn: "Go back"

# Notifications
- tapOn:
    text: "Notifications"
- tapOn:
    text: "Has permission?"
- assertVisible:
    text: "Information"
- tapOn:
    text: "OK"
- tapOn:
    text: "Request permission"
- assertVisible:
    text: "Permission was granted"
- tapOn:
    text: "OK"
- tapOn: 
    text: "Display notification"
- assertVisible: 
    text: "Title"
- tapOn: "Go back"

# Mobile
- tapOn:
    text: "Mobile"
- tapOn:
    text: "Device info"
- assertVisible: 
    text: "Device info"