appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- tapOn:
    text: "J"
- tapOn:
    text: "NanoflowCommons"
- tapOn:
    text: "Other activities"
- tapOn:
    text: "Get platform"
- assertVisible: "Current platform: Native"
- tapOn: "OK"
- tapOn: "Wait 3s"
- extendedWaitUntil:
    visible: "Done!"
    timeout: 10000   






