appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- tapOn:
    text: "Accordion"
- tapOn:
    text: "Custom"
- assertVisible:
    text: "Custom"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/accordion_custom"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/accordion_custom.png"
