appId: "${APP_ID}"
---
# Flow for animation
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- tapOn:
    text: "Animation"
- assertVisible:
    id: "image1"
    index: 0
- tapOn:
    text: "Animate"
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/animation"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/animation.png"
