appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "B"
      - extendedWaitUntil:
          visible: "Background image"
          timeout: 10000
- tapOn:
    text: "Background image"
- tapOn:
    text: "Clickable container"
- tapOn:
    id: "clickableContainer"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/bg_image_clickable_container"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/bg_image_clickable_container.png"
