appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "B"
      - extendedWaitUntil:
          visible: "Background image"
          timeout: 10000
- tapOn:
    text: "Background image"
- tapOn:
    text: "Conditional visibility"
- assertVisible: "Condtional visibility"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/bg_image_conditional_visibility"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/bg_image_conditional_visibility.png"
