appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "B"
      - extendedWaitUntil:
          visible: "Background image"
          timeout: 10000
- tapOn:
    text: "Background image"
- tapOn:
    text: "Static SVG images"
- assertVisible: "Static SVG images"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/bg_image_static_svg"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/bg_image_static_svg.png"

