appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "B"
      - extendedWaitUntil:
          visible: "Barcode scanner"
          timeout: 10000
- tapOn:
    text: "Barcode scanner"
- assertVisible:
    id: "text2" # History:
- tapOn:
    text: "Scan"
- extendedWaitUntil:
    visible: 
        text: "Scan"
    timeout: 30000
