appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "B"
      - extendedWaitUntil:
          visible: "Bottom Sheet"
          timeout: 10000
- tapOn:
    text: "Bottom Sheet"
- tapOn:
    text: "Modal basic"
- tapOn:
    text: "Open"
- tapOn:
    text: "Diego"
