appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "C"
      - extendedWaitUntil:
          visible: "Carousel"
          timeout: 10000
- tapOn:
    text: "Carousel"
- swipe:
    from:
      text: "Logo"
    direction: LEFT
- assertVisible:
    text: "Office"
- swipe:
    from:
      text: "Office"
    direction: LEFT
- assertVisible:
    text: "Fish"
