appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "C"
      - extendedWaitUntil:
          visible: "Color picker"
          timeout: 10000
- tapOn:
    text: "Color picker"
- tapOn:
    text: "OnChange"
- assertVisible:
    text: "Color picker - OnChange"
