appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "C"
      - extendedWaitUntil:
          visible: "Color picker"
          timeout: 10000
- tapOn:
    text: "Color picker"
- tapOn:
    text: "Partial"
- assertVisible:
    text: "Color picker - Partial"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/color_picker_partial"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/color_picker_partial.png"
