appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "F"
      - extendedWaitUntil:
          visible: "Feedback"
          timeout: 10000
- tapOn:
    text: "Feedback"
- assertVisible:
    text: ".*Lorem ipsum.*"
