appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "F"
      - extendedWaitUntil:
          visible: "Floating action button"
          timeout: 10000
- tapOn:
    text: "Floating action button"
- tapOn:
    id: "floatingActionButtonTopLeft"
- tapOn:
    id: "floatingActionButtonBottomLeft"
- tapOn:
    id: "floatingActionButtonBottomRight"
- tapOn:
    id: "floatingActionButtonTopRight"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/floating_action_button"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/floating_action_button.png"

