appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "G"
      - extendedWaitUntil:
          visible: "Gallery"
          timeout: 10000
- tapOn:
    text: "Gallery"
- tapOn:
    text: "Gallery"
- assertNotVisible:
    text: ".*Title 5.*"
- tapOn:
    text: "Load more"
- assertVisible:
    text: ".*Title 5.*"
- swipe:
    from:
      text: ".*Title 5.*"
    direction: UP
- assertVisible:
    text: ".*Title 9.*"
- tapOn:
    text: "Load more"
- assertVisible:
    text: ".*Title 10.*"
- swipe:
    from:
      text: ".*Title 10.*"
    direction: UP
- assertVisible:
    text: ".*Title 14.*"