appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "G"
      - extendedWaitUntil:
          visible: "Gallery"
          timeout: 10000
- tapOn:
    text: "Gallery"
- tapOn:
    text: "Gallery"
- assertVisible:
    text: ".*Title 0.*"
- repeat:
    times: 35
    commands:
      - swipe:
          start: 90%, 10%
          end: 15%, 10%
- assertVisible:
    text: ".*Title 20.*"